tdf#120290 sw: comment no longer needs any width

Way back in 2001 with commit dca044e9572144c1ba9ce423b10f7a5456837cda,
   Fix #93831#: Larger range for tip help on notes,
comments were called Notes, and looked similar to Calc's
comments - just a tooltip kind of note that you hover over.

Adding some fake space to the comment anchor
probably helped to get access to that note.

But now that comments are always visible in a side panel,
there doesn't seem to be any need to pretend
that the comment anchor takes up any space, which fixes
a few corner cases where that fake width exceeded
the real width of small portions that followed.

Change-Id: I4e9dac12dce0545e0ac79e46597f6e441dc066a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105747
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 3c4b09a250605c9d73e48df83a6ee36a8bc2fb8b)